--- a/css/cleanup.css
+++ b/css/cleanup.css
@@ -1,1 +1,17 @@
 /* write your override styles here */
+
+#wall div.tag-1 {
+  display: none;
+}
+
+div#wall div#tag-3.slick.wicked {
+  display: none;
+}
+
+#wall div#tag-2 {
+  display: none;
+}
+
+.parent {
+  display: none;
+}
